--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.16.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-redux": "^5.0.5",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
