--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "expect": "^1.20.2",
     "history": "^4.4.0",
     "lodash": "^4.16.2",
     "react": "^15.3.2",
